src/components/MainMenu.module.scss
@import '../styles/mixins';
@import '../styles/variables';

.nav {
	position: relative;
}

.menuToggle {
	display: none;
}

.menuToggleLabel {
	display: none;
	margin-left: auto;

	@media (max-width: $breakpoint) {
		display: inline-block;
		cursor: pointer;
	}
}

.menu {
	margin: 0;
	padding: 0;
	display: flex;
	align-items: start;
	gap: 2rem;

	@media (max-width: $breakpoint) {
		position: absolute;
		top: -1rem;
		right: 1.5rem;

		background: #fff;
		padding: 1rem 1.5rem;

		opacity: 0;
		width: 0;
		visibility: hidden;
		transition: all 1s ease, opacity .2s ease;

		.menuToggle:checked ~ & {
			opacity: 1;
			width: auto;
			visibility: visible;
		}
	}
}

.menuItem {
	list-style-type: none;
	font-size: 1.3rem;
	line-height: 1.3;
}

.link {
	display: block;
	color: #3c4040;
	text-decoration: none;
	text-transform: lowercase;

	&::after {
		content: '';
		display: block;
		margin: auto;
		height: 3px;
		width: 0;
		background: transparent;
		transition: width .5s ease, background-color .5s ease;
	}

	&:hover, &.activeLink {
		color: #222;

		&::after {
			width: 100%;
			background: $color-accent;
		}
	}
}

